--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             overflow-x: hidden;
         }
 
-        /* Header con efecto glassmorphism */
         .header {
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(20px);
@@ -89,7 +88,6 @@
             background-clip: text;
         }
 
-        /* Navegación moderna */
         .nav-links {
             display: flex;
             list-style: none;
@@ -105,6 +103,7 @@
             transition: var(--transition);
             position: relative;
             overflow: hidden;
+            cursor: pointer;
         }
 
         .nav-link::before {
@@ -132,7 +131,6 @@
             box-shadow: var(--shadow);
         }
 
-        /* Hero Section */
         .hero {
             background: var(--gradient);
             min-height: 100vh;
@@ -196,7 +194,6 @@
             box-shadow: var(--shadow-hover);
         }
 
-        /* Main Content */
         .main-content {
             max-width: 1200px;
             margin: 0 auto;
@@ -234,7 +231,6 @@
             background-clip: text;
         }
 
-        /* Cards modernas */
         .content-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
@@ -299,7 +295,6 @@
             margin-bottom: 1.5rem;
         }
 
-        /* Elementos interactivos mejorados */
         .interactive-element {
             text-align: center;
             margin-top: 2rem;
@@ -374,7 +369,6 @@
             display: none;
         }
 
-        /* Listas de beneficios */
         .benefits-list {
             list-style: none;
             margin: 1.5rem 0;
@@ -401,7 +395,6 @@
             justify-content: center;
         }
 
-        /* Stats Section */
         .stats {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -437,7 +430,6 @@
             font-weight: 600;
         }
 
-        /* Footer mejorado */
         .footer {
             background: var(--dark);
             color: white;
@@ -497,7 +489,6 @@
             color: #a0aec0;
         }
 
-        /* Responsive */
         @media (max-width: 768px) {
             .header-content {
                 flex-direction: column;
@@ -538,7 +529,6 @@
             }
         }
 
-        /* Efectos de partículas para el fondo */
         .particles {
             position: fixed;
             top: 0;
@@ -563,7 +553,6 @@
             50% { transform: translateY(-20px) rotate(180deg); }
         }
 
-        /* Nuevos estilos para contenido expandido */
         .info-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -687,10 +676,10 @@
                     <div class="interactive-element">
                         <img src="https://images.unsplash.com/photo-1593811167562-9cef47bf4a28?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" 
                              alt="Meditación mindfulness" class="health-image">
-                        <button class="toggle-btn" onclick="toggleDescription()">
+                        <button class="toggle-btn" onclick="toggleContent('inicio-desc')">
                             <i class="fas fa-lightbulb"></i> Descubre el Poder Mental
                         </button>
-                        <div id="health-description" class="description hidden">
+                        <div id="inicio-desc" class="description hidden">
                             <p><strong>💡 Revelación Científica:</strong> Estudios de la Universidad de Harvard demuestran que la meditación diaria de 15 minutos puede aumentar tu productividad en un 30% y reducir el estrés en un 40%. La neuroplasticidad nos permite reprogramar nuestro cerebro a cualquier edad.</p>
                             <div class="tip-box">
                                 <strong>🔄 Técnica de 5 Minutos:</strong> Siéntate cómodamente, cierra los ojos y enfócate en tu respiración. Cuando surjan pensamientos, obsérvalos sin juzgar y regresa suavemente a la respiración.
@@ -721,10 +710,10 @@
                     </div>
 
                     <div class="interactive-element">
-                        <button class="toggle-btn" onclick="toggleNutritionTip()">
+                        <button class="toggle-btn" onclick="toggleContent('inicio-nutri')">
                             <i class="fas fa-seedling"></i> Secreto Nutricional Revelado
                         </button>
-                        <div id="nutrition-tip" class="description hidden">
+                        <div id="inicio-nutri" class="description hidden">
                             <p><strong>🥗 Combinación Perfecta:</strong> Los alimentos ricos en antioxidantes como arándanos, nueces y chocolate negro (70%+) pueden revertir el daño celular. Combina proteínas magras con carbohidratos complejos para energía sostenida durante todo el día.</p>
                             <div class="warning-box">
                                 <strong>⚠️ Alerta:</strong> Evita los alimentos ultraprocesados que contienen jarabe de maíz de alta fructosa, ya que está vinculado con resistencia a la insulina y obesidad.
@@ -755,10 +744,10 @@
                     <div class="interactive-element">
                         <img src="https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" 
                              alt="Alimentos saludables" class="health-image">
-                        <button class="toggle-btn" onclick="toggleNutritionTip()">
+                        <button class="toggle-btn" onclick="toggleContent('nutri-plan')">
                             <i class="fas fa-star"></i> Plan de Alimentación Semanal
                         </button>
-                        <div id="nutrition-tip" class="description hidden">
+                        <div id="nutri-plan" class="description hidden">
                             <p><strong>📅 Menú Semanal Saludable:</strong></p>
                             <p><strong>Lunes:</strong> Desayuno: Avena con frutos rojos | Almuerzo: Ensalada de quinoa con aguacate | Cena: Salmón al horno con espárragos</p>
                             <p><strong>Martes:</strong> Desayuno: Smoothie verde | Almuerzo: Wrap de pollo y vegetales | Cena: Curry de lentejas con arroz integral</p>
@@ -781,6 +770,19 @@
                         <li>Incluye proteína en cada comida</li>
                         <li>Consume pequeñas comidas cada 3-4 horas</li>
                     </ul>
+
+                    <div class="interactive-element">
+                        <button class="toggle-btn" onclick="toggleContent('nutri-meta')">
+                            <i class="fas fa-bolt"></i> Acelera Tu Metabolismo
+                        </button>
+                        <div id="nutri-meta" class="description hidden">
+                            <p><strong>⚡ Estrategias Comprobadas:</strong></p>
+                            <p>• Entrenamiento por intervalos de alta intensidad (HIIT)</p>
+                            <p>• Consumo de té verde matcha (aumenta termogénesis)</p>
+                            <p>• Dormir 7-8 horas de calidad cada noche</p>
+                            <p>• Manejo del estrés (el cortisol ralentiza el metabolismo)</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -805,10 +807,10 @@
                     <div class="interactive-element">
                         <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" 
                              alt="Ejercicio al aire libre" class="health-image">
-                        <button class="toggle-btn" onclick="toggleExerciseTip()">
+                        <button class="toggle-btn" onclick="toggleContent('ejercicio-rutina')">
                             <i class="fas fa-dumbbell"></i> Rutina Express de 15 Minutos
                         </button>
-                        <div id="exercise-tip" class="description hidden">
+                        <div id="ejercicio-rutina" class="description hidden">
                             <p><strong>💪 Circuito de Alta Intensidad:</strong> Realiza 3 rondas del siguiente circuito con 1 minuto de descanso entre rondas:</p>
                             <p>• 30 segundos de sentadillas (descanso 15s)</p>
                             <p>• 30 segundos de flexiones (descanso 15s)</p>
@@ -846,6 +848,17 @@
                     <div class="warning-box">
                         <strong>📊 Dato Alarmante:</strong> Pasar más de 8 horas sentado al día aumenta el riesgo de enfermedades cardíacas en un 147%, incluso si haces ejercicio regularmente.
                     </div>
+
+                    <div class="interactive-element">
+                        <button class="toggle-btn" onclick="toggleContent('ejercicio-movimiento')">
+                            <i class="fas fa-heartbeat"></i> Beneficios del Movimiento
+                        </button>
+                        <div id="ejercicio-movimiento" class="description hidden">
+                            <p><strong>❤️ Salud Cardiovascular:</strong> El movimiento regular mejora la circulación, reduce la presión arterial y fortalece el corazón.</p>
+                            <p><strong>🧠 Función Cerebral:</strong> Aumenta el flujo sanguíneo al cerebro, mejorando la memoria y concentración.</p>
+                            <p><strong>💪 Salud Ósea:</strong> Previene la osteoporosis y mantiene la densidad mineral ósea.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -870,10 +883,10 @@
                     <div class="interactive-element">
                         <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" 
                              alt="Equilibrio y paz" class="health-image">
-                        <button class="toggle-btn" onclick="toggleMentalTip()">
+                        <button class="toggle-btn" onclick="toggleContent('mental-respiracion')">
                             <i class="fas fa-brain"></i> Técnica de Respiración Anti-ansiedad
                         </button>
-                        <div id="mental-tip" class="description hidden">
+                        <div id="mental-respiracion" class="description hidden">
                             <p><strong>🌬️ Respiración 4-7-8 del Dr. Weil:</strong> </p>
                             <p>1. Exhala completamente por la boca</p>
                             <p>2. Inhala por la nariz contando mentalmente hasta 4</p>
@@ -900,29 +913,4 @@
                             <p>3 cosas por las que estás agradecido cada día</p>
                         </div>
                         <div class="feature-box">
-                            <div class="feature-icon">
-                                <i class="fas fa-hands-helping"></i>
-                            </div>
-                            <h4>Actos de Bondad</h4>
-                            <p>Ayudar a otros activa centros de placer cerebral</p>
-                        </div>
-                    </div>
-
-                    <div class="tip-box">
-                        <strong>💖 Efecto Mariposa:</strong> Las emociones positivas fortalecen tu sistema inmunológico, reducen la inflamación crónica y pueden añadir hasta 7 años a tu esperanza de vida.
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Nueva Sección Sueño -->
-        <section id="sueño" class="content-section">
-            <h2 class="section-title">Sueño Reparador</h2>
-            
-            <div class="content-grid">
-                <div class="info-card">
-                    <h3><i class="fas fa-moon"></i> Higiene del Sueño</h3>
-                    <p>El sueño es el tercer pilar de la salud, junto con la nutrición y el ejercicio. Aprende a optimizar tu descanso.</p>
-                    
-                    <ul class="benefits-list">
-                        <li>Mantén horarios consistentes (even
+                            <div class="feature
